# FabricaSorvete

./: .gitignore  Para_Corrigir.txt  ingredientes.pkl  main.py  pyproject.toml
controller/: ControladorDepositos.py  ControladorIngredientes.py  ControladorSabores.py  ControladorSistema.py  ControladorSorvetes.py  ControladorTransferencias.py
dao/: DAO.py  daoDepositos.py  daoIngredientes.py  daoSorvetes.py  daoTransferencias.py
exceptions/: DepositoNaoEncontrado.py  IngredienteDiminuirInsuficiente.py  IngredienteInsuficiente.py  IngredienteNaoEncontrado.py  InteiroInvalido.py  ReceitaInvalida.py  SabornoSistema.py  SorveteInsuficiente.py  SorveteNaoEncontrado.py  TransferenciaNaoEncontrada.py
model/: Deposito.py  Ingrediente.py  Model.py  Receita.py  Sabor.py  Sorvete.py  Transferencia.py
view/: Tela.py  TelaDeposito.py  TelaDepositos.py  TelaIngrediente.py  TelaSabor.py  TelaSistema.py  TelaSorvete.py  TelaTransferencia.py
